# coin2

./: .dockerignore  .env.example  .gitignore  README.md  ccxt_ws.py  docker-compose.kafka.yml  docker-compose.yml  pyproject.toml  requirements.txt
ansible/: README.md  Vagrantfile  ansible.cfg  inventory.example.ini  simple-playbook.yaml
ansible/playbooks/: change-ssh-port.yaml  cleanup-playbook.yaml  cleanup.yaml  infra-setup-tagged.yaml  infra-setup.yaml  setup-playbook-tagged.yaml
ansible/prompts/: README.md  docker.md  k3s.md  kafka.md  storage.md  tailscale.md  uv-python.md
app/: configs.py  consts.py  heartbeat.py  kafka.py  ws.py
app/collector/: bitfinex.py  init.py  okx.py
app/etl/: cli_raw.py  init.py  raw.py  raw_cli.py  save_raw.py  save_raw_cli.py  watch_raw.py  watch_raw_cli.py
app/fetch/: admin.py  binance.py  bitfinex.py  (+4 more)
common/: catalog.py  configs.py  consts.py  kafka.py  logging.py
dagster_src/: consts.py  dagster.yaml  definitions.py  jobs.py  resources.py  schedules.py  workspace.yaml
data/: connections.py  interfaces.py
docs/: APP.md  CATALOG.md  DATABASE.md  DEBUGGING.md  KAFKA.md  ORCHESTRATION.md
k8s/: coin2-configmap.example.yaml  coin2-etl.yaml  coin2-fetch-binance.yaml  coin2-fetch.yaml  coin2-heartbeat.yaml  coin2-init-hb.yaml  coin2-insert (deprecated).yaml  coin2-insert-binance.yaml  coin2-insert.yaml  coin2-kafka-service.yaml  coin2-pvc (deprecated).yaml  coin2-sub-binance.yaml  coin2-volume.example.yaml  coin2.yaml
models/: base_model.py  consts.py  dummy.py
scripts/: data-infra.sh  init.sh  k8s-restart.sh  k8s-shutdown.sh  k8s-start.sh  k8s-stop.sh  kafka-connect-cleanup.sh  kafka-init.sh  py-module.sh  shutdown.sh  start.sh  uv-run-module-with-env.sh  uv-run-module.sh
(+47 files in other folders)
