[project]
name = "coin2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.8",
    "clickhouse-connect>=0.10.0",
    "clickhouse-driver>=0.2.10",
    "confluent-kafka==2.4.0",
    "daft-lts>=0.7.1",
    "dagster>=1.12.7",
    "dagster-dg-cli>=1.12.7",
    "dagster-docker>=0.28.7",
    "dagster-graphql>=1.12.7",
    "dagster-postgres>=0.28.7",
    "dagster-webserver>=1.12.7",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyiceberg[pyiceberg-core]>=0.10.0",
    "requests==2.32.3",
    "watchdog>=6.0.0",
    "websockets==12.0",
]
